# OpenDiscord

./: .gitignore  BUILD.md  Cargo.toml  README.md  SETUP.md  config_example.json
src/: config.rs  main.rs
